Concord client 2.25.0 compat.